[gd_scene load_steps=5 format=3 uid="uid://bslcaq3n0fu2v"]

[ext_resource type="Script" path="res://Overlay/Inventory/Slot/equip_slot.gd" id="1_0kjpe"]
[ext_resource type="PackedScene" uid="uid://umpc8ullrhlr" path="res://Modifier/modifier_sprite.tscn" id="2_hqrgf"]

[sub_resource type="LabelSettings" id="LabelSettings_hal6o"]
line_spacing = 0.0

[sub_resource type="LabelSettings" id="LabelSettings_1xknn"]
line_spacing = 0.0

[node name="EquipSlot" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(300, 80)
offset_right = 300.0
offset_bottom = 80.0
script = ExtResource("1_0kjpe")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2
color = Color(0.662452, 0.662452, 0.662452, 1)

[node name="Margin" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Margin"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="VBoxContainer/Margin/VBoxContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Margin/VBoxContainer/HBox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="VBoxContainer/Margin/VBoxContainer/HBox/CenterContainer"]
layout_mode = 2

[node name="ModifierSprite" parent="VBoxContainer/Margin/VBoxContainer/HBox/CenterContainer/Panel" instance=ExtResource("2_hqrgf")]
unique_name_in_owner = true
scale = Vector2(10, 10)

[node name="DetailsVBox" type="VBoxContainer" parent="VBoxContainer/Margin/VBoxContainer/HBox"]
layout_mode = 2
theme_override_constants/separation = -6
alignment = 1

[node name="NameLabel" type="Label" parent="VBoxContainer/Margin/VBoxContainer/HBox/DetailsVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "Something"
label_settings = SubResource("LabelSettings_hal6o")

[node name="TierLabel" type="Label" parent="VBoxContainer/Margin/VBoxContainer/HBox/DetailsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Something"
label_settings = SubResource("LabelSettings_1xknn")

[node name="MidSpacer" type="Control" parent="VBoxContainer/Margin/VBoxContainer/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RemoveButton" type="Button" parent="VBoxContainer/Margin/VBoxContainer/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "X"

[node name="TypeHBox" type="HBoxContainer" parent="VBoxContainer/Margin/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Bottom" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2
color = Color(0.662745, 0.662745, 0.662745, 1)
